--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -33,6 +33,7 @@
 @import "../components-global/_tooltip";
 @import "../components-global/_steps";
 @import "../components-global/_switch";
+@import "../components-global/_notification";
 
 
 // cards
