--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -3056,6 +3056,56 @@ input[type=checkbox]:focus {
   transition: left 0.2s;
 }
 
+.notification {
+  width: 280px;
+}
+.notification .card {
+  box-shadow: none;
+}
+.notification .notification-base {
+  display: flex;
+  color: #212121;
+  padding: 8px;
+}
+.notification .notification-base:hover, .notification .notification-base.hover {
+  background-color: #f5f5f5;
+  -webkit-box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+.notification .notification-base .avatar {
+  flex: 0 0 auto;
+  margin-right: 10px;
+}
+.notification .notification-base .notification-content {
+  flex: 1 1 auto;
+}
+.notification .notification-base h6 {
+  margin: 0;
+  line-height: 21px;
+}
+.notification .notification-base p {
+  margin: 0;
+  font-size: 0.75rem;
+  color: #757575;
+  line-height: 18px;
+}
+.notification .notification-base span {
+  margin-top: 4px;
+  line-height: 16px;
+  display: inline-flex;
+  font-size: 0.6875rem;
+  color: #a3a3a3;
+}
+.notification .notification-base span i {
+  margin-top: 3px;
+}
+.notification .notification-base span p {
+  color: #a3a3a3;
+  margin: 0 3px;
+}
+
 .uh-img-showcase img {
   background: #FFFFFF;
   -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 10px 20px 0 rgba(0, 0, 0, 0.1);
